--- a/EdibleOilAnalysis/AppShell.xaml
+++ b/EdibleOilAnalysis/AppShell.xaml
@@ -30,6 +30,7 @@
     </Shell.Resources>
 
     <TabBar>
+        <ShellContent Title="Client" Icon="icon_feed.png" ContentTemplate="{DataTemplate local:ClientListPage}" />
         <ShellContent Title="Calculator" Icon="icon_feed.png" ContentTemplate="{DataTemplate local:CalculatorPage}" />
         <ShellContent Title="About" Icon="icon_about.png" Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </TabBar>
